# bcdice-irc-gui

./: .editorconfig  .gitignore  .gitmodules  Cargo.toml  build.rs
src/: app.rs  bcdice-irc.glade  main.rs  menu.xml
src/app/: irc_bot.rs  signal_handler.rs  widget.rs
