[package]
name = "bcdice-irc-gui"
version = "0.1.0"
authors = ["ocha <ochaochaocha3@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.gtk]
version = "0.8.1"
features = ["v3_16"]

[dependencies.gio]
version = ""
features = ["v2_44"]

[dependencies.glib]
version = ""
features = ["v2_44"]

[dependencies.clap]
version = "^2.33"
