[package]
name = "bcdice-irc-gui"
version = "0.1.0"
authors = ["ocha <ochaochaocha3@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { version = "^0.8.1", features = ["v3_16"] }
gio = { version = "", features = ["v2_44"] }
glib = { version = "", features = ["v2_44"] }
clap = "^2.33"
tonic = "^0.2"
prost = "^0.6"
tokio = { version = "0.2", features = ["macros"] }

[build-dependencies]
tonic-build = "^0.2"
